# Polymaker

./: .env.example  .gitattributes  .gitignore  DATA_LICENSE.md  LICENSE  README.md  pyproject.toml  vercel.json
.github/workflows/: ci.yml
api/: index.py
data/evaluation/: gold-scenarios.v1.json
data/materials/: materials.v1.json
data/source-register/: official-sources.v1.csv
docs/: architecture.md  competition-proposal.md  data-governance.md  demo-script.md  evaluation.md  feishu-setup.md  official-requirements.md  phase-0-decision-log.md  research-evidence.md  submission-checklist.md  报名与开题报告_可粘贴版.md
scripts/: check_data.py  evaluate_gold.py
src/polypilot/: __init__.py  api.py  audit.py  config.py  engine.py  feishu.py  intent.py  models.py  repository.py
tests/: test_api.py  test_engine.py  test_gold_scenarios.py  test_integrations.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
web/e2e/: app.spec.ts
web/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
